# Terminal-ASCII-Video

./: .gitignore  CMakeLists.txt  README.md  TestVideos.zip.REMOVED.git-id  bin1.zip.REMOVED.git-id
source/: main.cpp  platform_common.cpp  platform_common.h  platform_specific.h  utils.h  windows_functions.cpp
source/VideoPlayer/: CMakeLists.txt  console_main.cpp  platform_common.cpp  utils.h  windows_functions.cpp
source/VideoSeeker/: CMakeLists.txt  seeker_main.cpp
